tests/sksl/errors/BadModifiers.glsl
### Compilation failed:

error: 1: functions cannot be both 'inline' and 'noinline'
error: 6: 'in uniform' variables not permitted
error: 6: 'const' variables must be initialized
3 errors
